objects/SIP__c.object
<CustomObject>
    <description>object for Industrial to manage the sales incentive plans for the Industrial sales users - populated by a workflow</description>
    <fields>
        <fullName>AM_Perf_Lev_2_Payout_Percent__c</fullName>
        <formula>Max_Payout_Percent__c  * 0.25</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AM Perf Lev 2 Payout %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AM_Perf_Lev_3_payout_Percent__c</fullName>
        <formula>Max_Payout_Percent__c  * 0.5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AM Perf Lev 3 payout %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AM_codes__c</fullName>
        <description>shows the AM codes the SIP participant is responsible for, pre populated based on user id and sales hierachy object however can be changed manually</description>
        <label>AM codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Administrator_Notes__c</fullName>
        <description>notes from SIP administrator about  plan conditions</description>
        <inlineHelpText>notes from SIP administrator about  plan conditions</inlineHelpText>
        <label>Administrator Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Annual_Maximum_Incentive__c</fullName>
        <description>shows the Annual Maximum Incentive % from the master record</description>
        <formula>SIP_master_record__r.Annual_Maximum_Incentive__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Maximum Incentive %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Application_Focus_Achieved_Weighting__c</fullName>
        <description>calculates the weighting of Business Driver Application Focus Conversion for SIP FY18, populated by a workflow.</description>
        <label>Application Focus Achieved Weighting</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Application_Focus_Adjustment__c</fullName>
        <label>Application Focus Adjustment $</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Focus_Conversion_Details__c</fullName>
        <description>Detailed Description of Application Focused Conversion</description>
        <inlineHelpText>Detailed Description of Application Focused Conversion.</inlineHelpText>
        <label>Application Focus Conversion details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Application_Focus_Conversion_Result__c</fullName>
        <description>Result for Application Focused Conversion</description>
        <label>Application Focus Conversion Result $</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Focus__c</fullName>
        <label>Application Focus Result  %</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Application_Text_part1__c</fullName>
        <label>Application Text part1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Text_part2__c</fullName>
        <label>Application Text part2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Text_part3__c</fullName>
        <label>Application Text part3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Automation Warehouse/Material Handling/AGV</fullName>
                </value>
                <value>
                    <fullName>Elevator Safety Efficiency Equip</fullName>
                    <label>Elevator Safety &amp; Efficiency Equipment</label>
                </value>
                <value>
                    <fullName>EV Charging Station /BMS/ESS</fullName>
                </value>
                <value>
                    <fullName>HVAC GP Controllers</fullName>
                    <label>HVAC General Purpose Controllers</label>
                </value>
                <value>
                    <fullName>HV SG Control Cabinets</fullName>
                    <label>HV Switchgear Control Cabinets</label>
                </value>
                <value>
                    <fullName>Industrial P Electronics</fullName>
                    <label>Industrial Power Electronics</label>
                </value>
                <value>
                    <fullName>Industrial Trucks/Forklifts</fullName>
                </value>
                <value>
                    <fullName>Machine Tools</fullName>
                </value>
                <value>
                    <fullName>MV SG Control Cabinets</fullName>
                    <label>MV Switchgear Control Cabinets</label>
                </value>
                <value>
                    <fullName>Outdoor Lighting</fullName>
                </value>
                <value>
                    <fullName>Packing Machine</fullName>
                </value>
                <value>
                    <fullName>Plastic Molding Machine</fullName>
                </value>
                <value>
                    <fullName>PLC</fullName>
                </value>
                <value>
                    <fullName>Rail - AC Rooflines</fullName>
                </value>
                <value>
                    <fullName>Rail - AUXILIARY POWER SUPPORT</fullName>
                </value>
                <value>
                    <fullName>Rail - DC Rooflines</fullName>
                </value>
                <value>
                    <fullName>Rail - Inverter/Converter</fullName>
                </value>
                <value>
                    <fullName>Rail - Jumpers</fullName>
                </value>
                <value>
                    <fullName>Rail - Motors</fullName>
                </value>
                <value>
                    <fullName>Rail Traction</fullName>
                </value>
                <value>
                    <fullName>Robotics</fullName>
                </value>
                <value>
                    <fullName>Robotics and Production Line Integration</fullName>
                </value>
                <value>
                    <fullName>Safety Controllers</fullName>
                </value>
                <value>
                    <fullName>Semi-conductor Manufa</fullName>
                    <label>Semi-conductor Manufacturing Equipment</label>
                </value>
                <value>
                    <fullName>Servo Drive</fullName>
                </value>
                <value>
                    <fullName>Servo Motor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver_Sub_Vertical_BU__c</fullName>
        <formula>TEXT(Approver__r.Sub_Vertical__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approver Sub Vertical BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver_Title__c</fullName>
        <formula>Approver__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approver Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The person to approve the SIP PLan</inlineHelpText>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SIP1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BD_POS_achieved_weighting__c</fullName>
        <description>Business Driver POS in specific region achieved weighting</description>
        <label>BD POS achieved weighting %</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Business_Driver_1_Achieved_Weighting__c</fullName>
        <label>Business Driver 1 Achieved Weighting</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Business_Driver_1_Achieved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Driver 1 Achieved ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Driver_1_Result_Comment__c</fullName>
        <description>to enter information related to the result achievement</description>
        <inlineHelpText>enter information related to the result achievement</inlineHelpText>
        <label>Business Driver 1 Result Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Driver_1_Result__c</fullName>
        <label>Business Driver 1 Result %</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Business_Driver_1_Weighting__c</fullName>
        <defaultValue>0.1</defaultValue>
        <inlineHelpText>% weighting of business driver 1</inlineHelpText>
        <label>Business Driver 1 Weighting</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Business_Driver_1__c</fullName>
        <description>the first Business Driver</description>
        <inlineHelpText>first business driver</inlineHelpText>
        <label>Business Driver 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Finished Goods Inventory Turn %</fullName>
                </value>
                <value>
                    <fullName>Cost Out Target</fullName>
                </value>
                <value>
                    <fullName>Ship To Schedule (STS) Target</fullName>
                </value>
                <value>
                    <fullName>Product Strategy Execution</fullName>
                </value>
                <value>
                    <fullName>Forecast Accuracy</fullName>
                </value>
                <value>
                    <fullName>Opportunity Conversion</fullName>
                </value>
                <value>
                    <fullName>Non Industrial Revenue Growth</fullName>
                </value>
                <value>
                    <fullName>Net Promoter Score</fullName>
                </value>
                <value>
                    <fullName>Quotation TAT</fullName>
                </value>
                <value>
                    <fullName>Pipeline conversion with Min TE content</fullName>
                </value>
                <value>
                    <fullName>Ship to Schedule &amp; LT</fullName>
                </value>
                <value>
                    <fullName>Conversion</fullName>
                </value>
                <value>
                    <fullName>Pipeline</fullName>
                </value>
                <value>
                    <fullName>Strategic Plan Execution</fullName>
                </value>
                <value>
                    <fullName>Ship to Request STR</fullName>
                </value>
                <value>
                    <fullName>NPS1 – new product sales</fullName>
                </value>
                <value>
                    <fullName>Product life cycle management- stream-lining</fullName>
                </value>
                <value>
                    <fullName>Intercontec</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Driver_1_details__c</fullName>
        <description>detailed description of Business Driver 1 target</description>
        <inlineHelpText>detailed description of Business Driver 1 target</inlineHelpText>
        <label>Business Driver 1 details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Driver_1_payout_Dollar__c</fullName>
        <formula>Business_Driver_1_Weighting__c * Max_Payout_Dollar__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Driver 1 payout $</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Driver_1_payout_percent__c</fullName>
        <formula>Business_Driver_1_Weighting__c * Max_Payout_Percent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Driver 1 payout %</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Business_Driver_2_Achieved_Weighting__c</fullName>
        <label>Business Driver 2 Achieved Weighting</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Business_Driver_2_Achieved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Driver 2 Achieved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Driver_2_Result_Comment__c</fullName>
        <description>to enter information related to the result achievement</description>
        <inlineHelpText>enter information&apos;s related to the result achievement</inlineHelpText>
        <label>Business Driver 2 Result Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Driver_2_Result__c</fullName>
        <label>Business Driver 2 Result %</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Business_Driver_2_Weighting__c</fullName>
        <defaultValue>0.1</defaultValue>
        <inlineHelpText>% weighting of business driver 2</inlineHelpText>
        <label>Business Driver 2 Weighting</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Business_Driver_2__c</fullName>
        <description>defines the first business driver</description>
        <inlineHelpText>select the business driver 2 for the plan participant</inlineHelpText>
        <label>Business Driver 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounts Receivable</fullName>
                </value>
                <value>
                    <fullName>Bookings Performance</fullName>
                </value>
                <value>
                    <fullName>Committee Work</fullName>
                </value>
                <value>
                    <fullName>Conversion Key Accounts</fullName>
                </value>
                <value>
                    <fullName>Customer Penetration</fullName>
                </value>
                <value>
                    <fullName>Customer Tech Days</fullName>
                </value>
                <value>
                    <fullName>Customer Visits</fullName>
                </value>
                <value>
                    <fullName>Delivery Performance</fullName>
                </value>
                <value>
                    <fullName>Focus GPL&apos;s Opportunities</fullName>
                </value>
                <value>
                    <fullName>Forecast Accuracy / Achievement</fullName>
                </value>
                <value>
                    <fullName>Invest to Win / Plattform Projects</fullName>
                </value>
                <value>
                    <fullName>New Customer Development</fullName>
                </value>
                <value>
                    <fullName>New Product Sales</fullName>
                </value>
                <value>
                    <fullName>Pipeline out of Leads</fullName>
                </value>
                <value>
                    <fullName>Regain Lost Business</fullName>
                </value>
                <value>
                    <fullName>Revenue Growth for Focus Products</fullName>
                </value>
                <value>
                    <fullName>Revenue Growth Key Accounts</fullName>
                </value>
                <value>
                    <fullName>Standard Margin Improvement</fullName>
                </value>
                <value>
                    <fullName>Strategic Plan Execution</fullName>
                </value>
                <value>
                    <fullName>Technical Articles, Press Releases</fullName>
                </value>
                <value>
                    <fullName>Finished Goods Inventory Turn %</fullName>
                </value>
                <value>
                    <fullName>Cost Out Target</fullName>
                </value>
                <value>
                    <fullName>Ship To Schedule (STS) Target</fullName>
                </value>
                <value>
                    <fullName>Product Strategy Execution</fullName>
                </value>
                <value>
                    <fullName>Forecast Accuracy</fullName>
                </value>
                <value>
                    <fullName>Opportunity Conversion</fullName>
                </value>
                <value>
                    <fullName>Non Industrial Revenue Growth</fullName>
                </value>
                <value>
                    <fullName>Quotation TAT</fullName>
                </value>
                <value>
                    <fullName>Pipeline conversion with Min TE content</fullName>
                </value>
                <value>
                    <fullName>Ship to Schedule &amp; LT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Driver_2_details__c</fullName>
        <description>detailed description of Business Driver 2 target</description>
        <inlineHelpText>detailed description of Business Driver 2 target</inlineHelpText>
        <label>Business Driver 2 details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Driver_2_payout_dollar__c</fullName>
        <formula>Business_Driver_2_Weighting__c  *  Max_Payout_Dollar__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Driver 2 payout $</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Driver_2_payout_percent__c</fullName>
        <formula>Business_Driver_2_Weighting__c * Max_Payout_Percent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Driver 2 payout %</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Business_Driver_3_Achieved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Driver 3 Achieved ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Driver_3_Result_Comment__c</fullName>
        <description>enter information&apos;s related to the result achievement</description>
        <inlineHelpText>enter information&apos;s related to the result achievement</inlineHelpText>
        <label>Business Driver 3 Result Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Driver_3_Weighting__c</fullName>
        <defaultValue>0.1</defaultValue>
        <inlineHelpText>% weighting of Business Driver 3</inlineHelpText>
        <label>Business Driver 3 Weighting</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Business_Driver_3__c</fullName>
        <description>pick list to select the business driver 3</description>
        <inlineHelpText>select the business driver 3</inlineHelpText>
        <label>Business Driver 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accounts Receivable</fullName>
                </value>
                <value>
                    <fullName>Bookings Performance</fullName>
                </value>
                <value>
                    <fullName>Committee Work</fullName>
                </value>
                <value>
                    <fullName>Conversion</fullName>
                </value>
                <value>
                    <fullName>Conversion Key Accounts</fullName>
                </value>
                <value>
                    <fullName>Cost Out Target</fullName>
                </value>
                <value>
                    <fullName>Customer Penetration</fullName>
                </value>
                <value>
                    <fullName>Customer Tech Days</fullName>
                </value>
                <value>
                    <fullName>Customer Visits</fullName>
                </value>
                <value>
                    <fullName>Delivery Performance</fullName>
                </value>
                <value>
                    <fullName>Finished Goods Inventory Turn %</fullName>
                </value>
                <value>
                    <fullName>Focus GPL&apos;s Opportunities</fullName>
                </value>
                <value>
                    <fullName>Forecast Accuracy</fullName>
                </value>
                <value>
                    <fullName>Forecast Accuracy / Achievement</fullName>
                </value>
                <value>
                    <fullName>Intercontec</fullName>
                </value>
                <value>
                    <fullName>Invest to Win / Plattform Projects</fullName>
                </value>
                <value>
                    <fullName>New Customer Development</fullName>
                </value>
                <value>
                    <fullName>New Product Sales</fullName>
                </value>
                <value>
                    <fullName>Opportunity Conversion</fullName>
                </value>
                <value>
                    <fullName>Pipeline</fullName>
                </value>
                <value>
                    <fullName>Pipeline conversion with Min TE content</fullName>
                </value>
                <value>
                    <fullName>Pipeline out of Leads</fullName>
                </value>
                <value>
                    <fullName>Product Strategy</fullName>
                </value>
                <value>
                    <fullName>Quotation TAT</fullName>
                </value>
                <value>
                    <fullName>Regain Lost Business</fullName>
                </value>
                <value>
                    <fullName>Revenue Growth for Focus Products</fullName>
                </value>
                <value>
                    <fullName>Revenue Growth Key Accounts</fullName>
                </value>
                <value>
                    <fullName>Ship To Schedule (STS) Target</fullName>
                </value>
                <value>
                    <fullName>Ship to Schedule &amp; LT</fullName>
                </value>
                <value>
                    <fullName>Standard Margin Improvement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Driver_3_details__c</fullName>
        <description>detailed description of Business Driver 3 target</description>
        <inlineHelpText>detailed description of Business Driver 3 target</inlineHelpText>
        <label>Business Driver 3 details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Driver_3_payout_dollar__c</fullName>
        <formula>Business_Driver_3_Weighting__c  * Max_Payout_Dollar__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Driver 3 payout $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Driver_3_payout_percent__c</fullName>
        <formula>Business_Driver_3_Weighting__c  *  Max_Payout_Percent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Driver 3 payout %</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Business_Driver_achieved_weighting__c</fullName>
        <label>Business Driver Achieved Weighting</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CBC2_Code__c</fullName>
        <description>the CBC2 code responsibility for BU PM leaders</description>
        <label>CBC2 Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBC3_Code__c</fullName>
        <label>CBC3 Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conversion_Adjustment_Comment__c</fullName>
        <description>text to justify the conversion adjustment</description>
        <inlineHelpText>justify the conversion adjustment</inlineHelpText>
        <label>Conversion Adjustment Comment</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Conversion_Carry_over_from_Prev_Year__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Shows the Opportuniyt Carry Over result from previous Year</description>
        <inlineHelpText>Conversion carry over from previous year which counts for plan year result</inlineHelpText>
        <label>Conversion Carry over from Prev Year</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conversion_Result_Achieved_Weight__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Achieved weighting of Conversion result , populated by workflow rule</description>
        <label>Conversion Result Achieved Weighting</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Conversion_Result_Achieved_Weighting__c</fullName>
        <formula>CASE( RecordType.Name ,
&quot;FE Plan&quot;,
IF( Conversion_Result_Percent__c &lt; Level_1_Conversion_target__c , 0,
IF( Conversion_Result_Percent__c &lt;= Level_2_Conversion_Target__c ,
(((Conversion_Result_Percent__c - Level_1_Conversion_target__c )/
(Level_2_Conversion_Target__c - Level_1_Conversion_target__c )) * 0.20),
IF(
Conversion_Result_Percent__c &lt;= Level_3_Conversion_Target__c ,
((((Conversion_Result_Percent__c - Level_2_Conversion_Target__c )/
(Level_3_Conversion_Target__c - Level_2_Conversion_Target__c )) * 0.20)+ 0.20), 0.4
))),
&quot;Sales Manager Plan&quot;,
IF( Conversion_Result_Percent__c &lt; Level_1_Conversion_target__c , 0,
IF( Conversion_Result_Percent__c &lt;= Level_2_Conversion_Target__c ,
(((Conversion_Result_Percent__c - Level_1_Conversion_target__c )/
(Level_2_Conversion_Target__c - Level_1_Conversion_target__c )) * 0.075),
IF(
Conversion_Result_Percent__c &lt;= Level_3_Conversion_Target__c ,
((((Conversion_Result_Percent__c - Level_2_Conversion_Target__c )/
(Level_3_Conversion_Target__c - Level_2_Conversion_Target__c )) * 0.075)+ 0.075), 0.15
))),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conv. Result Achieved Weight. % Formula</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Conversion_Result_Percent__c</fullName>
        <defaultValue>0</defaultValue>
        <description>shows the conversion result in % compared to last year revenue result, populated by workflow</description>
        <label>Conversion Result %</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Conversion_result__c</fullName>
        <defaultValue>0</defaultValue>
        <description>shows the result of converted opportunities incl carry over from prev. year</description>
        <inlineHelpText>shows the year to date result of converted Opportunities in $ incl. carry over from prev. year</inlineHelpText>
        <label>Conversion result $</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Fiscal_Year_Direct__c</fullName>
        <formula>Load_Status_Monthly_Direct__r.Current_Fiscal_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Fiscal Year Direct</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Fiscal_Year_Indirect__c</fullName>
        <formula>Load_Status_Record_Indirect__r.Current_Fiscal_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Fiscal Year Indirect</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Year_Direct_Bill_YTD__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Current  Direct Billings result year to date  in USD</inlineHelpText>
        <label>Plan Year Direct Bill YTD</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_Direct_Billings_Run_Rate__c</fullName>
        <description>calaculated the run rate of the direct billings based on YTD billings and YTD fiscal days from the load status object</description>
        <formula>IF (Text(Plan_Year__c) = Text(Year(TODAY()+96 )),
Current_Year_Direct_Bill_YTD__c / Load_Status_Direct_Billings__c * 260,
Current_Year_Direct_Bill_YTD__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Year Direct Billings Run Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_POS_Bill_YTD__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Plan Year POS Bill YTD</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_POS_Run_Rate__c</fullName>
        <description>calculates the POS run rate based on YTD POS and load status of the Indirect object</description>
        <formula>IF (Text(Plan_Year__c) = Text(Year(TODAY()+96)),
Current_Year_POS_Bill_YTD__c / Load_Status_POS__c * 260,
Current_Year_POS_Bill_YTD__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>the  POS run rate</inlineHelpText>
        <label>Plan Year POS Run Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Details_POS_in_specific_Region__c</fullName>
        <label>Details POS in specific Region</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EPB_Achieved_Weight__c</fullName>
        <defaultValue>0</defaultValue>
        <description>EPB achieved weighting result, populated by workflow rule</description>
        <label>EPB Achieved Weighting</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EPB_Achieved_Weighting__c</fullName>
        <formula>IF(OR(RecordType.Name = &quot;AM Plan&quot;, RecordType.Name  = &quot;GAM Plan&quot;, RecordType.Name  = &quot;Sales Manager Plan&quot;,RecordType.Name  = &quot;AM Plan FY15&quot;,RecordType.Name  = &quot;GAM Plan FY15&quot;,RecordType.Name  = &quot;SM Plan FY15&quot;,RecordType.Name  = &quot;PM CCAO FY15&quot;,RecordType.Name  = &quot;PM FY15&quot;),
IF(AND(Plan_Year_Growth__c &gt; Level_3_Growth_Target__c,Plan_Year_Growth__c &lt;= Exceptional_Perf_Growth_Reve__c),
(((Plan_Year_Growth__c - Level_3_Growth_Target__c )/
(Exceptional_Perf_Growth_Reve__c - Level_3_Growth_Target__c )) * 0.25),
IF(Exceptional_Perf_Growth_Reve__c &lt; Plan_Year_Growth__c,0.25,0))
,
IF(RecordType.Name = &quot;FE Plan&quot;,
IF(AND(Conversion_Result_Percent__c &gt; Level_3_Conversion_Target__c,Conversion_Result_Percent__c &lt;= Exceptional_Perf_Conversion_Target__c ),
(((Conversion_Result_Percent__c - Level_3_Conversion_Target__c )/
(Exceptional_Perf_Conversion_Target__c - Level_3_Conversion_Target__c )) * 0.25),
IF(Exceptional_Perf_Conversion_Target__c &lt; Conversion_Result_Percent__c,0.25,0)),

0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EPB Achieved Weighting Formula</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Exceptional_Forecast_Attainment_Target__c</fullName>
        <label>Exceptional Forecast Attainment Target %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Exceptional_Perf_Conversion_Target_Dolla__c</fullName>
        <formula>Total_Revenue_Baseline__c  *  Exceptional_Perf_Conversion_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exceptional Perf. Conversion Target $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>